# T-DT_CampusGame_Client_2023

./: .clang-format  CMakeLists.txt  README.md  main.cpp
include/: NetworkManager.h  tools.h
include/tools/core/: base64.h
include/tools/network/: json_serializer.h  network_structs.h  zmq_client.h
libs/: libopencv_core.so.4.5.4d  libopencv_highgui.so.4.5.4d  libopencv_imgcodecs.so.4.5.4d
src/: NetworkManager.cpp  base64.cpp  json_serializer.cpp  tools.cpp  zmq_client.cpp
